--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-"<h1> Mi Pagina Web con Git </h1>" 
+<h1>Mi Pagina Web con Git</h1>
+<p>Este es mi primer sitio gestionado con Git y GitHub</p>
+<p>Mi nombre es: <strong>Fernando Villarreal</strong></p>
+<p>y mi correo es: fernando4974@gmail.com</p>
