--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<h1>Mi Pagina Web con Git</h1>
-<p>Este es mi primer sitio gestionado con Git y GitHub</p>
-<p>Mi nombre es: <strong>Fernando Villarreal</strong></p>
-<p>y mi correo es: fernando4974@gmail.com</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+       <h1>Mi Pagina Web con Git</h1>
+    <p>Este es mi primer sitio gestionado con Git y GitHub</p>
+    <p>Mi nombre es: <strong>Fernando Villarreal</strong></p>
+    <p>y mi correo es: fernando4974@gmail.com</p>
+</body>
+</html>
+
+
