--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Mi Pagina Web con Git</h1>
+<h2>Bienvenido a mi sitio web</h2>
 <p>Este es mi primer sitio gestionado con Git y GitHub</p>
 <p>Mi nombre es: <strong>Fernando Villarreal</strong></p>
 <p>y mi correo es: fernando4974@gmail.com</p>
