--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
        <h1>Mi Pagina Web con Git</h1>
+       <h2>Bienvenido a mi Pagina Web</h2>
     <p>Este es mi primer sitio gestionado con Git y GitHub</p>
     <p>Mi nombre es: <strong>Fernando Villarreal</strong></p>
     <p>y mi correo es: fernando4974@gmail.com</p>
