--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<nav>
+    <li><a href="index.html"></a></li>
+    <li><a href="about.html"></a></li>
+</nav>
 <body>
        <h1>Mi Pagina Web con Git</h1>
        <h2>Bienvenido a mi Pagina Web</h2>
