--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
 </body>
        <h1>Mi Pagina Web con Git</h1>
+       <h2>dañando merge pagina-contaco</h2>
        <h2>Bienvenido a mi Pagina Web</h2>
     <p>Este es mi primer sitio gestionado con Git y GitHub</p>
     <p>Mi nombre es: <strong>Fernando Villarreal</strong></p>
