--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <nav>
     <li><a href="index.html"></a></li>
     <li><a href="about.html"></a></li>
+    <li><a href="references.html"></a></li>
     <li><a href="contacto.html"></a></li>
 </nav>
 <body>
