--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <li><a href="index.html"> inicio</a></li>
-    <li><a href="about.html"></a>acerca de</li>
-    <li><a href="references.html"></a>referencias</li>
-    <li><a href="contacto.html"></a>contaco</li>
+    <a href="index.html"> inicio</a>
+    <a href="about.html">acerca de</a>
+    <a href="references.html">referencias</a>
+    <a href="contacto.html">contaco</a>
 
     
 
